--- a/index.html
+++ b/index.html
@@ -1,67 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button Example</title>
-    <style>
-        /* Style the button */
-        .my-button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        /* Hover effect */
-        .my-button:hover {
-            background-color: #0056b3;
-        }
-
-        /* Container for displaying data */
-        .data-container {
-            margin-top: 20px;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-    </style>
+    <title>Number Guessing Game</title>
 </head>
 
 <body>
-    <!-- Button element -->
-    <button class="my-button" onclick="fetchData()" id="fetchButton" >Fetch Data</button>
-
-    <!-- Container to display fetched data -->
-    <div class="data-container"></div>
+    <h1>Number Guessing Game</h1>
+    <p>Guess a number between 1 and 10:</p>
+    <input type="text" id="guessField">
+    <button onclick="checkGuess()">Submit Guess</button>
+    
 
     <script>
-        function fetchData() {
-            // Fetch data from the API
-            fetch('https://www.boredapi.com/api/activity')
-                .then(response => response.json())
-                .then(data => {
-                    // Display the data on the website
-                    var container = document.querySelector('.data-container');
-                    container.innerHTML = `
-                    <h2>${data.activity}</h2>
-                    <p>Participants: ${data.participants}</p>
-                    <p>Price: ${data.price}</p>
-                    <p>Accessibility: ${data.accessibility}</p>
-                    <p>Link: ${data.link}</p>
-                `;
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
+        // Generate a random number between 1 and 10
+        const randomNumber = Math.floor(Math.random() * 10) + 1;
+        let guesses = 0;
 
+        function checkGuess() {
+            const guess = parseInt(document.getElementById('guessField').value);
+            if (isNaN(guess) || guess < 1 || guess > 10) {
+                alert('Please enter a valid number between 1 and 10.');
+                return;
+            }
 
+            guesses++;
 
-
+            if (guess === randomNumber) {
+                alert("Congratulations! You guessed the correct number " + randomNumber + " in " + guesses + " Attempts.");
+            } else if (guess < randomNumber) {
+                alert('Too low! Try again.');
+            } else {
+                alert('Too high! Try again.');
+            }
         }
     </script>
 </body>
